<resources>
    <string name="app_name">Code Impact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cohorts">Cohorts</string>
    <string name="about_us">About Us</string>
    <string name="techkids">Tech Kids</string>
    <string name="community">Community</string>
    <string name="blog">Blog</string>
    <string name="code_impact_ug">Code Impact Ug</string>
</resources>