<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.codeimpact.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cohorts"
        android:name="com.example.codeimpact.ui.gallery.CohortsFragment"
        android:label="@string/cohorts"
        tools:layout="@layout/fragment_cohorts" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.codeimpact.ui.slideshow.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_techKids"
        android:name="com.example.codeimpact.TechKidsFragment"
        android:label="@string/techkids"
        tools:layout="@layout/fragment_tech_kids" />
    <fragment
        android:id="@+id/nav_community"
        android:name="com.example.codeimpact.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />
    <fragment
        android:id="@+id/nav_blog"
        android:name="com.example.codeimpact.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/fragment_blog" />
</navigation>